--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 		    </div>
 
 		</div>
+
+		<!-- <script type="text/javascript" src="previous_script.js"></script> -->
 		<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
